# Scripts

./: --add-suffix  Otzaria  Zayit  debug_footnotes.py  debug_specific_paragraphs.py  debug_text_processing.py  docx2org.py  docx_to_org.py  docx_to_org_batch.py  docx_to_org_complete.py  docx_to_org_complete_backup.py  docx_to_org_complete_copy.py  docx_to_org_complete_new.py  docx_to_org_enhanced.py  docx_to_org_simple.py  docx_to_org_with_footnotes.py  file_opener.py  file_opener_copy.py  find_missing_footnotes.py  org_cleaner.py  python_docx.sh  rust.plan  rustPlan1.org  rustPlan2.org  test_docx2org.sh  usefulLines.org
OtzariaClone1/: HowTo  flake.nix  otzariaMod  package.json
OtzariaClone1/src/: index.html  (+3 more)
OtzariaClone1/src-tauri/: Cargo.toml  tauri.conf.json
OtzariaClone1/src-tauri/src/: main.rs
OtzariaClone2/: otzariaMod
docx_to_org_enhanced/: org_cleaner.py  org_cleaner_copy.py
docx_to_org_regular/: docx_to_org.py  docx_to_org_1.py  docx_to_org_2.py  docx_to_org_enhanced.py~  docx_to_org_enhanced_copy.py~  docx_to_org_regular.py
finder/: file_opener_3.py  file_opener_tuo_copy.py  file_opener_tuo_copy_copy.py  open-with-fzf  open-with-fzf-folder
notes_app/: main.py
notes_app_copy/: main.py
notes_app_copy_2/: main.py
notes_app_copy_3/: flake.nix  main.py  shell.nix
rust_plan/: A half-hour to learn Rust.html  additional.org  backendReferenceSheet.org  cheatSheet.org  compilerErrors.org  debugging.org  flake.nix  nix.org  ownershipBorrowing.org  rustPlan0.org  rustPlan1.org  rustPlan2.org  rustPlan3.org  rustPlan4.org  rustPlan5.org  tracker.org
(+13 files in other folders)
