[package]
name = "otzaria"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog", "shell-open", "menu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.21"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
